// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge with children 1`] = `
<div
  className="sc-bwzfXH gRMGFR"
  size={20}
>
  <span>
    badge
  </span>
</div>
`;

exports[`badge with custom positions 1`] = `
<div
  className="sc-bwzfXH hmiDgM"
  size={20}
/>
`;

exports[`badge with custom positions 2`] = `
<div
  className="sc-bwzfXH eBIpuq"
  size={20}
/>
`;

exports[`badge with custom positions 3`] = `
<div
  className="sc-bwzfXH dMXhtB"
  size={20}
/>
`;

exports[`badge with custom positions 4`] = `
<div
  className="sc-bwzfXH ewTNnx"
  size={20}
/>
`;

exports[`badge with custom size 1`] = `
<div
  className="sc-bwzfXH kgbHKq"
  size={60}
/>
`;

exports[`badge with default positions 1`] = `
<div
  className="sc-bwzfXH iENjUu"
  size={20}
/>
`;

exports[`badge with default positions 2`] = `
<div
  className="sc-bwzfXH cWmCLJ"
  size={20}
/>
`;

exports[`badge with default positions 3`] = `
<div
  className="sc-bwzfXH dYfbcO"
  size={20}
/>
`;

exports[`badge with default positions 4`] = `
<div
  className="sc-bwzfXH NGCRN"
  size={20}
/>
`;

exports[`badge with no children 1`] = `
<div
  className="sc-bwzfXH gRMGFR"
  size={20}
/>
`;

exports[`badge with style 1`] = `
<div
  className="sc-bwzfXH gRMGFR"
  size={20}
  style={
    Object {
      "justifyContent": "flex-start",
    }
  }
/>
`;
